# matrixindex

./: .gitignore  README.md
source/: CMakeLists.txt  matrixindex.cpp  matrixindex.h
